lo que agregue abajo de Hero Section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>Controla tu clima, donde quieras y cuando quieras</h1>
         <p>Ajusta la temperatura de tu hogar de forma fácil y eficiente con Climatic.</p>
     </section>
-<!-- Acerca de Nosotros con imágenes deslizantes -->
+<!-- LO QUE AGREGUE  -->
 <section class="about-section">
     <div class="slider-container">
         <div class="slider slider-left">
@@ -50,6 +50,8 @@
         </div>
     </div>
 </section>
+<!-- FIN DE LO QUE AGREGUE -->
+
 
     <!-- Sobre el Proyecto -->
     <section id="sobre" class="section">
