--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="nav-logo">Climatic</div>
             <ul>
                 <li><a href="#sobre">Sobre el Proyecto</a></li>
-                <li><a href="#funcionamiento">Como funciona</a></li>
+                <li><a href="#funcionamiento">¿Cómo Funciona?</a></li>
                 <li><a href="#funcionalidades">Funcionalidades</a></li>
                 <li><a href="#beneficios">Beneficios</a></li>
                 <li><a href="#compatibilidad">Compatibilidad</a></li>
@@ -30,118 +30,134 @@
         <h1>Controla tu clima, donde quieras y cuando quieras</h1>
         <p>Ajusta la temperatura de tu hogar de forma fácil y eficiente con Climatic.</p>
     </section>
-<!-- LO QUE AGREGUE  -->
+    <!-- LO QUE AGREGUE  -->
 <section class="about-section">
     <div class="slider-container">
         <div class="slider slider-left">
-            <div class="image-wrapper"><img src="img/temperatura.png" alt="Imagen de ejemplo"></div>
-            <div class="image-wrapper"><img src="img/app.png" alt="Imagen de ejemplo"></div>
-            <div class="image-wrapper"><img src="img/wifi.png" alt="Imagen de ejemplo"></div>
-            <div class="image-wrapper"><img src="img/horario.jpeg" alt="Imagen de ejemplo"></div>
+            <div class="image-wrapper"><img src="img/temperatura.png"></div>
+            <div class="image-wrapper"><img src="img/app.png"></div>
+            <div class="image-wrapper"><img src="img/wifi.png"></div>
+            <div class="image-wrapper"><img src="img/horario.jpeg"></div>
         </div>
     </div>
     <div class="slider-container">
         <div class="slider slider-right">
-            <div class="image-wrapper"><img src="img/termostato.jpeg" alt="Imagen de ejemplo"></div>
-            <div class="image-wrapper"><img src="img/app.png" alt="Imagen de ejemplo"></div>
-            <div class="image-wrapper"><img src="img/wifi.png" alt="Imagen de ejemplo"></div>
-            <div class="image-wrapper"><img src="img/horario.jpeg" alt="Imagen de ejemplo"></div>
+            <div class="image-wrapper"><img src="img/temperatura.png"></div>
+            <div class="image-wrapper"><img src="img/app.png"></div>
+            <div class="image-wrapper"><img src="img/wifi.png"></div>
+            <div class="image-wrapper"><img src="img/horario.jpeg"></div>
         </div>
         </div>
     </div>
-</section>
-<!-- FIN DE LO QUE AGREGUE -->
-
+    </section>
+    <!-- FIN DE LO QUE AGREGUE -->
 
     <!-- Sobre el Proyecto -->
     <section id="sobre" class="section">
         <h2>¿Qué es Climatic?</h2>
-        <p>Climatic es una solución innovadora que permite controlar de manera inteligente y 
-            eficiente la temperatura de tu hogar o lugar de trabajo. A través de una aplicación móvil, 
-            puedes gestionar la calefacción y refrigeración desde cualquier lugar, optimizando el consumo energético y 
-            mejorando tu confort diario. Con funciones como el control remoto, la programación de horarios, la integración con dispositivos inteligentes, y la capacidad de aprender de tus hábitos, Climatic ofrece un entorno cómodo y eficiente, reduciendo el 
-            desperdicio de energía y los costos de electricidad. Además, su monitoreo en tiempo real y su interfaz intuitiva garantizan una experiencia fácil de usar y totalmente personalizada.</p>
+        <p>Climatic es una solución innovadora que permite controlar la temperatura de tu hogar de manera inteligente y eficiente. Con nuestra aplicación, puedes gestionar la calefacción y refrigeración desde cualquier lugar, optimizando el consumo energético y mejorando tu confort diario.</p>
     </section>
 
     <!-- Cómo Funciona -->
-    <section id="como-funciona" class="section">
+    <section id="funcionamiento" class="section">
         <h2>¿Cómo Funciona Climatic?</h2>
         <p>Climatic se conecta a tu termostato inteligente a través de una red Wi-Fi, lo que te permite controlar la temperatura de tu hogar desde cualquier lugar usando la aplicación. Con nuestra interfaz intuitiva, solo necesitas unos pocos toques para configurar la temperatura, programar horarios y optimizar el consumo energético.</p>
     </section>
 
-  <!-- Funcionalidades -->
-<section id="funcionalidades" class="section">
-    <h2>Funcionalidades Principales</h2>
-    <div class="features">
-        <div class="feature">
-            <div class="feature-content">
-                <i class="fa-solid fa-temperature-high"></i>
-                <h3>Control de Temperatura</h3>
+    <!-- Funcionalidades -->
+    <section id="funcionalidades" class="section">
+        <h2>Funcionalidades Principales</h2>
+        <div class="features">
+            <div class="feature">
+                <div class="feature-content">
+                    <i class="fa-solid fa-temperature-high green-icon"></i> <!-- Ícono verde -->
+                    <h3>Control de Temperatura</h3>
+                </div>
+                <p class="feature-description">Ajusta la temperatura de tu hogar de manera eficiente según tus necesidades.</p>
             </div>
-            <p class="feature-description">Ajusta la temperatura de tu hogar de manera eficiente según tus necesidades.</p>
-        </div>
-        <div class="feature">
-            <div class="feature-content">
-                <i class="fa-solid fa-chart-line"></i>
-                <h3>Monitoreo Térmico</h3>
+            <div class="feature">
+                <div class="feature-content">
+                    <i class="fa-solid fa-chart-line peach-icon"></i> <!-- Ícono durazno -->
+                    <h3>Monitoreo Térmico</h3>
+                </div>
+                <p class="feature-description">Supervisa las condiciones térmicas en tiempo real para un control óptimo.</p>
             </div>
-            <p class="feature-description">Supervisa las condiciones térmicas en tiempo real para un control óptimo.</p>
-        </div>
-        <div class="feature">
-            <div class="feature-content">
-                <i class="fa-solid fa-clock"></i>
-                <h3>Programación Personalizada</h3>
+            <div class="feature">
+                <div class="feature-content">
+                    <i class="fa-solid fa-clock green-icon"></i> <!-- Ícono verde -->
+                    <h3>Programación Personalizada</h3>
+                </div>
+                <p class="feature-description">Configura horarios adaptados a tus rutinas para un mayor ahorro energético.</p>
             </div>
-            <p class="feature-description">Configura horarios adaptados a tus rutinas para un mayor ahorro energético.</p>
-        </div>
-        <div class="feature">
-            <div class="feature-content">
-                <i class="fa-solid fa-globe"></i>
-                <h3>Control Remoto</h3>
+            <div class="feature">
+                <div class="feature-content">
+                    <i class="fa-solid fa-globe peach-icon"></i> <!-- Ícono durazno -->
+                    <h3>Control Remoto</h3>
+                </div>
+                <p class="feature-description">Controla la temperatura desde cualquier lugar con conexión a internet.</p>
             </div>
-            <p class="feature-description">Controla la temperatura desde cualquier lugar con conexión a internet.</p>
-        </div>
-        <div class="feature">
-            <div class="feature-content">
-                <i class="fa-solid fa-calendar-check"></i>
-                <h3>Configuración de Horarios</h3>
+            <div class="feature">
+                <div class="feature-content">
+                    <i class="fa-solid fa-calendar-check green-icon"></i> <!-- Ícono verde -->
+                    <h3>Configuración de Horarios</h3>
+                </div>
+                <p class="feature-description">Personaliza los horarios de funcionamiento según tus preferencias.</p>
             </div>
-            <p class="feature-description">Personaliza los horarios de funcionamiento según tus preferencias.</p>
-        </div>
-        <div class="feature">
-            <div class="feature-content">
-                <i class="fa-solid fa-history"></i>
-                <h3>Historial de Temperatura</h3>
+            <div class="feature">
+                <div class="feature-content">
+                    <i class="fa-solid fa-history peach-icon"></i> <!-- Ícono durazno -->
+                    <h3>Historial de Temperatura</h3>
+                </div>
+                <p class="feature-description">Accede al historial de temperatura para un análisis detallado del comportamiento térmico.</p>
             </div>
-            <p class="feature-description">Accede al historial de temperatura para un análisis detallado del comportamiento térmico.</p>
         </div>
-    </div>
-</section>
-
+    </section>
 
     <!-- Beneficios -->
-    <section id="beneficios" class="section">
-        <h2>¿Por qué elegir Climatic?</h2>
-        <ul>
-            <li>✅ Ahorro energético hasta un 30%.</li>
-            <li>✅ Control total desde cualquier dispositivo.</li>
-            <li>✅ Seguridad contra cambios bruscos de temperatura.</li>
-            <li>✅ Alertas y notificaciones.</li>
-            <li>✅ Soprte técnico y actualizaciones.</li>
-        </ul>
-    </section>
+   <!-- Beneficios -->
+<section id="beneficios" class="section">
+    <h2>¿Por qué elegir Climatic?</h2>
+    <div class="benefits">
+        <div class="benefit">
+            <div class="benefit-content">
+                <i class="fa-solid fa-mobile-screen-button icon-durazno"></i> <!-- Ícono durazno -->
+                <h3>Control Remoto</h3>
+            </div>
+            <p class="benefit-description">Gestiona la temperatura desde cualquier lugar con tu dispositivo móvil o computadora.</p>
+        </div>
+        <div class="benefit">
+            <div class="benefit-content">
+                <i class="fa-solid fa-shield-halved icon-teal"></i> <!-- Ícono verde -->
+                <h3>Seguridad Térmica</h3>
+            </div>
+            <p class="benefit-description">Mantén tu hogar a una temperatura segura y estable para evitar cambios bruscos.</p>
+        </div>
+        <div class="benefit">
+            <div class="benefit-content">
+                <i class="fa-solid fa-clock icon-durazno"></i> <!-- Ícono durazno -->
+                <h3>Automatización Inteligente</h3>
+            </div>
+            <p class="benefit-description">Programa el termostato según tus rutinas diarias para un mayor confort y eficiencia.</p>
+        </div>
+        <div class="benefit">
+            <div class="benefit-content">
+                <i class="fa-solid fa-heart icon-teal"></i> <!-- Ícono verde -->
+                <h3>Comodidad Garantizada</h3>
+            </div>
+            <p class="benefit-description">Disfruta de la temperatura perfecta en todo momento para tu bienestar.</p>
+        </div>
+</section>
+
 
     <!-- Compatibilidad -->
     <section id="compatibilidad" class="section">
         <h2>Compatibilidad</h2>
-        <p>Climatic es compatible con termostatos inteligentes de múltiples marcas y 
-            funciona en iOS, Android y Web.</p>
+        <p>Climatic es compatible con termostatos inteligentes de múltiples marcas y funciona en iOS, Android y Web.</p>
     </section>
 
     <!-- Descarga -->
     <section id="descargar" class="section">
         <h2>Descarga Climatic Hoy</h2>
-        <a href="#" class="btn">Descargar en iOS</a>
         <a href="#" class="btn btn-dark">Descargar en Android</a>
     </section>
 
