--- a/climatic/index.html
+++ b/climatic/index.html
@@ -30,38 +30,45 @@
         <h1>Controla tu clima, donde quieras y cuando quieras</h1>
         <p>Ajusta la temperatura de tu hogar de forma fácil y eficiente con Climatic.</p>
     </section>
-    <!-- LO QUE AGREGUE  -->
+
+        <!-- LO QUE AGREGUE  -->
 <section class="about-section">
     <div class="slider-container">
         <div class="slider slider-left">
-            <div class="image-wrapper"><img src="img/temperatura.png"></div>
-            <div class="image-wrapper"><img src="img/app.png"></div>
-            <div class="image-wrapper"><img src="img/wifi.png"></div>
-            <div class="image-wrapper"><img src="img/horario.jpeg"></div>
+            <div class="image-wrapper"><img src="./img/imagen1.png"></div>
+            <div class="image-wrapper"><img src="./img/imagen2.png"></div>
+            <div class="image-wrapper"><img src="./img/imagen3.png"></div>
+            <div class="image-wrapper"><img src="./img/imagen4.png"></div>
         </div>
     </div>
     <div class="slider-container">
         <div class="slider slider-right">
-            <div class="image-wrapper"><img src="img/temperatura.png"></div>
-            <div class="image-wrapper"><img src="img/app.png"></div>
-            <div class="image-wrapper"><img src="img/wifi.png"></div>
-            <div class="image-wrapper"><img src="img/horario.jpeg"></div>
+            <div class="image-wrapper"><img src="./img/imagen1.png"></div>
+            <div class="image-wrapper"><img src="./img/imagen2.png"></div>
+            <div class="image-wrapper"><img src="./img/imagen3.png"></div>
+            <div class="image-wrapper"><img src="./img/imagen4.png"></div>
         </div>
         </div>
     </div>
     </section>
     <!-- FIN DE LO QUE AGREGUE -->
 
+
+
     <!-- Sobre el Proyecto -->
     <section id="sobre" class="section">
         <h2>¿Qué es Climatic?</h2>
-        <p>Climatic es una solución innovadora que permite controlar la temperatura de tu hogar de manera inteligente y eficiente. Con nuestra aplicación, puedes gestionar la calefacción y refrigeración desde cualquier lugar, optimizando el consumo energético y mejorando tu confort diario.</p>
+        <p>Climatic es una solución innovadora que permite controlar la temperatura de tu hogar de manera inteligente y eficiente. Con nuestra aplicación, puedes gestionar la calefacción y refrigeración desde cualquier lugar, 
+            optimizando el consumo energético y mejorando tu confort diario. Además, Climatic se adapta a tus hábitos y preferencias, aprendiendo automáticamente los ajustes más adecuados para ti. Puedes programar temperaturas específicas, 
+            recibir alertas de consumo y tener un control total a través de tu celular o dispositivo conectado. Con una interfaz fácil de usar, Climatic te ofrece una experiencia moderna, 
+            sostenible y económica para crear el ambiente ideal en tu hogar en todo momento.</p>
     </section>
 
     <!-- Cómo Funciona -->
     <section id="funcionamiento" class="section">
         <h2>¿Cómo Funciona Climatic?</h2>
         <p>Climatic se conecta a tu termostato inteligente a través de una red Wi-Fi, lo que te permite controlar la temperatura de tu hogar desde cualquier lugar usando la aplicación. Con nuestra interfaz intuitiva, solo necesitas unos pocos toques para configurar la temperatura, programar horarios y optimizar el consumo energético.</p>
+        <p>Eres tú quien ajusta la temperatura según tus preferencias, sin necesidad de programación de horarios. La aplicación te permite cambiar la temperatura en tiempo real, asegurando que siempre encuentres tu hogar a la temperatura ideal cuando lo desees.</p>
     </section>
 
     <!-- Funcionalidades -->
@@ -168,8 +175,14 @@
         <p>📞 Teléfono: +34 600 123 456</p>
     </section>
 
+    <!-- Footer -->
     <footer>
         <p>© 2025 Climatic - Todos los derechos reservados</p>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/TU_PERFIL" class="social-icon" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/TU_PERFIL" class="social-icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://twitter.com/TU_PERFIL" class="social-icon" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+        </div>
     </footer>
 </body>
 </html>
