--- a/climatic/index.html
+++ b/climatic/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <script src="script.js"></script>
 </head>
 <body>
     <!-- Encabezado -->
@@ -27,34 +28,27 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Controla tu clima, donde quieras y cuando quieras</h1>
-        <p>Ajusta la temperatura de tu hogar de forma fácil y eficiente con Climatic.</p>
+        <div class="carousel">
+            <div class="carousel-item active">
+                <img src="img/imagen1.png" alt="Imagen 1">
+            </div>
+            <div class="carousel-item">
+                <img src="img/imagen2.png" alt="Imagen 2">
+            </div>
+            <div class="carousel-item">
+                <img src="img/imagen3.png" alt="Imagen 2">
+            </div>
+            <div class="carousel-item">
+                <img src="img/imagen4.png" alt="Imagen 2">
+            </div>
+            
+            <!-- Añade más imágenes aquí -->
+        </div>
+        <div class="hero-content">
+            <h2>Controla tu clima, donde quieras y cuando quieras</h2>
+            <p>Ajusta la temperatura de tu hogar de forma fácil y eficiente con Climatic.</p>
+        </div>
     </section>
-
-        <!-- LO QUE AGREGUE  -->
-<section class="about-section">
-    <div class="slider-container">
-        <div class="slider slider-left">
-            <div class="image-wrapper"><img src="./img/imagen1.png"></div>
-            <div class="image-wrapper"><img src="./img/imagen2.png"></div>
-            <div class="image-wrapper"><img src="./img/imagen3.png"></div>
-            <div class="image-wrapper"><img src="./img/imagen4.png"></div>
-        </div>
-    </div>
-    <div class="slider-container">
-        <div class="slider slider-right">
-            <div class="image-wrapper"><img src="./img/imagen1.png"></div>
-            <div class="image-wrapper"><img src="./img/imagen2.png"></div>
-            <div class="image-wrapper"><img src="./img/imagen3.png"></div>
-            <div class="image-wrapper"><img src="./img/imagen4.png"></div>
-        </div>
-        </div>
-    </div>
-    </section>
-    <!-- FIN DE LO QUE AGREGUE -->
-
-
-
     <!-- Sobre el Proyecto -->
     <section id="sobre" class="section">
         <h2>¿Qué es Climatic?</h2>
@@ -175,7 +169,6 @@
         <p>📞 Teléfono: +34 600 123 456</p>
     </section>
 
-    <!-- Footer -->
     <footer>
         <p>© 2025 Climatic - Todos los derechos reservados</p>
         <div class="social-icons">
